--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
     <!-- botones fin -->
 
-    <img class="logo barbie" src="images/babyshark.png" alt="">
+    <img class="logo babyshark" src="images/babyshark.png" alt="">
     <!-- <img class="bg" src="/images/bg.png" alt=""> -->
 
     <!-- cumple -->
 
       <p class="anim cumple">Tito cumple</p>
-      <p class="anim cumple numero">5</p>
+      <p class="anim cumple numero">2</p>
 
     <!-- cumple fin -->
 
@@ -55,7 +55,7 @@
 
     <!-- modal contador -->
 
-    <img class="hidden star" src="images/star.png" alt="" data-anijs="if: click, do: bounceIn animated">
+    <!-- <img class="hidden star" src="images/star.png" alt="" data-anijs="if: click, do: bounceIn animated"> -->
     <div class="hidden modalContador">
       <p class="faltan">Faltan:</p>
       <div class="contador">
